fixing characters and spacing

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -48,7 +48,6 @@ p, li {
 
 li {
 	text-align: left;
-	padding-bottom: 20px;
 }
 
 body {
